--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,14 @@
     <link rel="stylesheet" href="/build/tailwind.css" />
     <title>Welcome to Tailwind!</title>
   </head>
-  <body class="antialiased">
-    <h1 class="text-pink-800 text-5xl">Start here!</h1>
+  <body class="antialiased p-8">
+    <header>
+      <h1 class="text-pink-600 font-serif font-bold text-5xl">Start here!</h1>
+    </header>
+    <main class="mt-4">
+      <section>
+        <p class="font-bold">Have fun with Tailwind CSS!</p>
+      </section>
+    </main>
   </body>
 </html>
