Disabled JIT mode as it's not working well in a sandbox.

--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,13 @@
   </head>
   <body class="antialiased p-8">
     <header>
-      <h1 class="text-pink-600 font-serif font-bold text-5xl">Start here!</h1>
+      <h1 class="text-pink-600 font-serif font-bold text-5xl">
+        Start here!
+      </h1>
     </header>
     <main class="mt-4">
       <section>
-        <p class="font-bold">Have fun with Tailwind CSS!</p>
+        <p class="font-bold text-xl">Have fun with Tailwind CSS!</p>
       </section>
     </main>
   </body>
